Move files from public to root

--- a/styles.css
+++ b/styles.css
@@ -2110,32 +2110,32 @@
 @layer base {
   @font-face {
     font-family: dana-bold;
-    src: url(../public/fonts/Dana/woff2/DanaFaNum-DemiBold.woff2);
+    src: url(../fonts/Dana/woff2/DanaFaNum-DemiBold.woff2);
     font-display: swap;
   }
   @font-face {
     font-family: dana-medium;
-    src: url(../public/fonts/Dana/woff2/DanaFaNum-Medium.woff2);
+    src: url(../fonts/Dana/woff2/DanaFaNum-Medium.woff2);
     font-display: swap;
   }
   @font-face {
     font-family: dana-regular;
-    src: url(../public/fonts/Dana/woff2/DanaFaNum-Regular.woff2);
+    src: url(../fonts/Dana/woff2/DanaFaNum-Regular.woff2);
     font-display: swap;
   }
   @font-face {
     font-family: morabba-bold;
-    src: url(../public/fonts/Morabba/woff2/Morabba-Bold.woff2);
+    src: url(../fonts/Morabba/woff2/Morabba-Bold.woff2);
     font-display: swap;
   }
   @font-face {
     font-family: morabba-light;
-    src: url(../public/fonts/Morabba/woff2/Morabba-Light.woff2);
+    src: url(../fonts/Morabba/woff2/Morabba-Light.woff2);
     font-display: swap;
   }
   @font-face {
     font-family: morabba-medium;
-    src: url(../public/fonts/Morabba/woff2/Morabba-Medium.woff2);
+    src: url(../fonts/Morabba/woff2/Morabba-Medium.woff2);
     font-display: swap;
   }
 }
@@ -2251,13 +2251,13 @@
   }
   @media screen and (min-width:1280px) {
     html.dark .products {
-      background-image: url(../public/images/products-bg.png);
+      background-image: url(../images/products-bg.png);
     }
     .products {
       @media (width >= 80rem) {
-        background-image: url('../public/images/products-bg.png');
+        background-image: url('../images/products-bg.png');
       }
-      background: linear-gradient(rgba(243,244,246, .65),rgba(243,244,246, .65)), url(../public/images/products-bg.png);
+      background-color: linear-gradient(rgba(243,244,246, .65),rgba(243,244,246, .65)), url(./images/products-bg.png);
       background-size: 100%;
       background-repeat: no-repeat;
     }
@@ -2309,12 +2309,12 @@
     }
   }
   .category-banner-items1 {
-    background: linear-gradient(270deg,rgba(0,0,0,.6) 33.85%,rgba(0,0,0,.1) 100% ), url(../public/images/categories/category-right.jpg);
+    background: linear-gradient(270deg,rgba(0,0,0,.6) 33.85%,rgba(0,0,0,.1) 100% ), url(./images/categories/category-right.jpg);
     background-size: cover;
     background-repeat: no-repeat;
   }
   .category-banner-items2 {
-    background: linear-gradient(270deg,rgba(0,0,0,.6) 33.85%,rgba(0,0,0,.1) 100% ), url(../public/images/categories/category-left.jpg);
+    background: linear-gradient(270deg,rgba(0,0,0,.6) 33.85%,rgba(0,0,0,.1) 100% ), url(./images/categories/category-left.jpg);
     background-size: cover;
     background-repeat: no-repeat;
   }
