--- a/src/input.css
+++ b/src/input.css
@@ -6,33 +6,33 @@
 
     @font-face {
             font-family: dana-bold;
-            src: url(../public/fonts/Dana/woff2/DanaFaNum-DemiBold.woff2);
+            src: url(../fonts/Dana/woff2/DanaFaNum-DemiBold.woff2);
             font-display: swap;
         }
     @font-face {
             font-family: dana-medium;
-            src: url(../public/fonts/Dana/woff2/DanaFaNum-Medium.woff2);
+            src: url(../fonts/Dana/woff2/DanaFaNum-Medium.woff2);
             font-display: swap;
         }
     @font-face {
             font-family: dana-regular;
-            src: url(../public/fonts/Dana/woff2/DanaFaNum-Regular.woff2);
+            src: url(../fonts/Dana/woff2/DanaFaNum-Regular.woff2);
             font-display: swap;
         }
 
     @font-face {
             font-family: morabba-bold;
-            src: url(../public/fonts/Morabba/woff2/Morabba-Bold.woff2);
+            src: url(../fonts/Morabba/woff2/Morabba-Bold.woff2);
             font-display: swap;
         }
     @font-face {
             font-family: morabba-light;
-            src: url(../public/fonts/Morabba/woff2/Morabba-Light.woff2);
+            src: url(../fonts/Morabba/woff2/Morabba-Light.woff2);
             font-display: swap;
         }
     @font-face {
             font-family: morabba-medium;
-            src: url(../public/fonts/Morabba/woff2/Morabba-Medium.woff2);
+            src: url(../fonts/Morabba/woff2/Morabba-Medium.woff2);
             font-display: swap;
         }
 
@@ -94,7 +94,7 @@
         height: 4px;
         background-color: #FDBA74;
         margin: auto;
-    }  
+    }
 
     .submenu{
         @apply hidden flex-col gap-y-3 pr-10 mt-3 text-sm text-zinc-600 dark:text-white;
@@ -117,27 +117,27 @@
     }
 
     .circle-top{
-        @apply w-[203px] h-[203px] border-white/25 hidden md:flex translate-y-2/4 absolute bottom-0 right-0 left-0 mx-auto; 
+        @apply w-[203px] h-[203px] border-white/25 hidden md:flex translate-y-2/4 absolute bottom-0 right-0 left-0 mx-auto;
     }
 
     .circle-mid{
-        @apply w-[145px] h-[145px] border-white/50; 
+        @apply w-[145px] h-[145px] border-white/50;
     }
 
     .circle-bottom{
-        @apply w-[95px] h-[95px] border-white/80; 
+        @apply w-[95px] h-[95px] border-white/80;
     }
 
     @media screen and (min-width:1280px){
 
         html.dark .products{
-            background-image:url(../public/images/products-bg.png) ;
+            background-image:url(../images/products-bg.png) ;
             }
-        
+
 
         .products{
-            @apply xl:bg-[url('../public/images/products-bg.png')];
-            background:linear-gradient(rgba(243,244,246, .65),rgba(243,244,246, .65)), url(../public/images/products-bg.png);
+            @apply xl:bg-[url('./images/products-bg.png')];
+            background:linear-gradient(rgba(243,244,246, .65),rgba(243,244,246, .65)), url(../images/products-bg.png);
             background-size: 100%;
             background-repeat: no-repeat;
         }
@@ -152,13 +152,13 @@
     }
 
     .category-banner-items1{
-            background:linear-gradient(270deg,rgba(0,0,0,.6) 33.85%,rgba(0,0,0,.1) 100% ), url(../public/images/categories/category-right.jpg);
+            background:linear-gradient(270deg,rgba(0,0,0,.6) 33.85%,rgba(0,0,0,.1) 100% ), url(../images/categories/category-right.jpg);
             background-size: cover;
             background-repeat: no-repeat;
     }
 
     .category-banner-items2{
-            background:linear-gradient(270deg,rgba(0,0,0,.6) 33.85%,rgba(0,0,0,.1) 100% ), url(../public/images/categories/category-left.jpg);
+            background:linear-gradient(270deg,rgba(0,0,0,.6) 33.85%,rgba(0,0,0,.1) 100% ), url(../images/categories/category-left.jpg);
             background-size: cover;
             background-repeat: no-repeat;
     }
