--- a/styles.css
+++ b/styles.css
@@ -913,7 +913,7 @@
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
   .bg-mobile {
-    background-image: url('images/headerBgMobile.webp');
+    background-image: url('./images/headerBgMobile.webp');
   }
   .from-orange-200 {
     --tw-gradient-from: var(--color-orange-200);
@@ -1656,7 +1656,7 @@
   }
   .md\:bg-desktop {
     @media (width >= 48rem) {
-      background-image: url('images/headerBgDesktop.png');
+      background-image: url('./images/headerBgDesktop.png');
     }
   }
   .md\:p-\[7px\] {
@@ -2110,32 +2110,32 @@
 @layer base {
   @font-face {
     font-family: dana-bold;
-    src: url(../fonts/Dana/woff2/DanaFaNum-DemiBold.woff2);
+    src: url(./fonts/Dana/woff2/DanaFaNum-DemiBold.woff2);
     font-display: swap;
   }
   @font-face {
     font-family: dana-medium;
-    src: url(../fonts/Dana/woff2/DanaFaNum-Medium.woff2);
+    src: url(./fonts/Dana/woff2/DanaFaNum-Medium.woff2);
     font-display: swap;
   }
   @font-face {
     font-family: dana-regular;
-    src: url(../fonts/Dana/woff2/DanaFaNum-Regular.woff2);
+    src: url(./fonts/Dana/woff2/DanaFaNum-Regular.woff2);
     font-display: swap;
   }
   @font-face {
     font-family: morabba-bold;
-    src: url(../fonts/Morabba/woff2/Morabba-Bold.woff2);
+    src: url(./fonts/Morabba/woff2/Morabba-Bold.woff2);
     font-display: swap;
   }
   @font-face {
     font-family: morabba-light;
-    src: url(../fonts/Morabba/woff2/Morabba-Light.woff2);
+    src: url(./fonts/Morabba/woff2/Morabba-Light.woff2);
     font-display: swap;
   }
   @font-face {
     font-family: morabba-medium;
-    src: url(../fonts/Morabba/woff2/Morabba-Medium.woff2);
+    src: url(./fonts/Morabba/woff2/Morabba-Medium.woff2);
     font-display: swap;
   }
 }
@@ -2251,11 +2251,11 @@
   }
   @media screen and (min-width:1280px) {
     html.dark .products {
-      background-image: url(../images/products-bg.png);
+      background-image: url(./images/products-bg.png);
     }
     .products {
       @media (width >= 80rem) {
-        background-image: url('../images/products-bg.png');
+        background-image: url('./images/products-bg.png');
       }
       background-color: linear-gradient(rgba(243,244,246, .65),rgba(243,244,246, .65)), url(./images/products-bg.png);
       background-size: 100%;
